--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -68,45 +68,45 @@ jobs:
        name: docker-scout-findings
        path: scout-report.sarif
 
-
  dast_scan:
-  name: Deploy and Perform DAST Scan
+  name: Perform DAST Scan
   runs-on: ubuntu-latest
 
   steps:
-    - name: Checkout code
+    - name: Clone Repository
       uses: actions/checkout@v2
 
-    - name: Set up Docker
-      uses: docker-practice/actions-setup-docker@v1
-      with:
-        docker_version: '20.10.7'
+    - name: List Project Files
+      run: ls -al
 
-    # deploy PyGoat by pulling the image from docker hub
-    - name: Deploy PyGoat
+    - name: Execute Installer
+      run: ./installer.sh
+
+    - name: Apply Database Migrations
+      run: python3 manage.py migrate
+
+    - name: Start Development Server
+      run: nohup python3 manage.py runserver 0.0.0.0:8000 &
+
+    - name: Pause for Server Initialization
+      run: sleep 10
+
+    - name: Test Server Endpoint
+      run: curl -I http://127.0.0.1:8000
+
+    - name: Install Nikto Tool
       run: |
-        docker pull pygoat/pygoat:latest
-        docker run --rm -d -p 8000:8000 pygoat/pygoat:latest
+        sudo apt-get update
+        sudo apt-get install -y nikto
 
-    - name: Wait for PyGoat to start
-      run: sleep 20
-    
-    # dast scan
-    - name: Run OWASP ZAP Scan
-      uses: zaproxy/action-baseline@v0.4.0
-      with:
-        target: 'http://localhost:8000'
+    - name: Conduct Nikto Vulnerability Scan
+      run: nikto -h http://127.0.0.1:8000 -o nikto-report.html -Format html
 
-    # upload ZAP Report
-    - name: Upload ZAP Report
+    - name: Confirm Report File Creation
+      run: ls -al
+
+    - name: Save Scan Report
       uses: actions/upload-artifact@v3
-      if: always()
       with:
-        name: zap-scan-report
-        path: /zap/wrk/
-
-    # summary of DAST
-    - name: Display Findings Summary
-      run: |
-        echo "Parsing ZAP Report"
-        grep "<alertitem>" -A 10 /zap/wrk/alerts.json | head -n 50 || echo "no alrets has been found"
+        name: nikto-report
+        path: nikto-report.html
